[package]
name = "crops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"
# cogent = "0.6.3"
rusty-machine = "0.5.4"
smartcore = "0.2.1"
ndarray = "0.15.6"
rand = { version = "0.8.5", features = ["alloc"] }
